--- a/app/globals.css
+++ b/app/globals.css
@@ -1,20 +1,17 @@
 @import "tailwindcss";
+@plugin "tailwind-scrollbar";
+
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+  /* --background: #ffffff;
+  --foreground: #171717; */
+  --background: #030712;
+  --foreground: #ededed;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
+    --background: #030712;
     --foreground: #ededed;
   }
 }
@@ -23,4 +20,9 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+}
+
+.glowing-border {
+  box-shadow: 0 0 15px #ffffff; /* Outer and inner glow */
+  transition: box-shadow 0.3s ease-in-out;
 }
